--- a/Dashboard.html
+++ b/Dashboard.html
@@ -55,6 +55,8 @@
                      <p>Password:<br>
                              <input id="password" type="password" name="password" required>
                      </p>
+                     <p>Account Balance:</p>
+                            <input id="acctbal" type="number" name="number" ><br><br>
 
                         <button type="submit" id="acc-update">Submit</button>
 
