post and withdraw operations fixed

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -18,7 +18,7 @@
                 <form>Account Deposit:<br>  
 
                     <h5>Amount:</h5>
-                    <input type="number" id="id-dep" name="number" placeholder="id goes here"><br>
+                    <input type="number" id="id-dep" name="number" placeholder="id goes here" required><br>
                     <br><input type="number" id="amt" name="number" required><br>
                     <button type="button" id="btn-deposit" required>Deposit</button><br><br>
                     
@@ -27,7 +27,7 @@
             <div class="col-lg-4 col-sm-6 thumbnail">
                  <form>Account Withdrawal:<br>
                     <h5>Amount</h5>
-             <input type="number" id="id-with" name="number" placeholder="id goes here"><br>   
+             <input type="number" id="id-with" name="number" placeholder="id goes here" required><br>   
                <br> <input id="with-amt" type="number" name="number"><br>
                 <button type="button" id="btn-withdraw" required>Withdraw</button>
            
