--- a/about.html
+++ b/about.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" type="text/css" href="about.css">
 </head>
 <body>
-    <p>Piggy Purse helps you achieve financial freedom by enabling you save responsibly </p>
+    <p>Piggy Purse helps you achieve financial freedom by enabling you save responsibly.<br><br>We pride
+        ourselves in gibving the best online savings you can have.
+        <p>kindly click <a href="newAccount.html">Sign Up</a> to create an account with us</p>
     
 </body>
 </html>
