--- a/Homepage.html
+++ b/Homepage.html
@@ -25,7 +25,7 @@
                                 </div>
                                 <div class="collapse navbar-collapse" id="bs-nav-project">
                                 <ul class="nav navbar-nav">
-                                    <li><a href="about.css">About Us</a></li>
+                                    <li><a href="about.html">About Us</a></li>
                                     <li><a href="#footer">Contact</a></li>
                                 </ul>
                                 <ul class="nav navbar-nav navbar-right">
