zero balance @ account balance creation

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -55,7 +55,7 @@
                      <p>Password:<br>
                              <input id="password" type="password" name="password" required>
                      </p>
-                     <p>Account Balance:</p>
+                     <p>Account Balance(#Do not EDIT):</p>
                             <input id="acctbal" type="number" name="number" ><br><br>
 
                         <button type="submit" id="acc-update">Submit</button>
