Js files separated/parts asper ()=>

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -73,6 +73,9 @@
     
    <script type="text/javascript" src="jquery-3.4.1.min.js"></script>          
    <script type="text/javascript" src="bootstrap.min.js"></script>
-   <script type="text/javascript" src="assets/js/proj.js"></script>
+   <script type="text/javascript" src="assets/js/acccountUpdate.js"></script>
+   <script type="text/javascript" src="assets/js/accountDeposit.js"></script>
+   <script type="text/javascript" src="assets/js/accountWithdrawal.js"></script>
+   
 </body>
 </html>
