--- a/newAccount.html
+++ b/newAccount.html
@@ -37,9 +37,9 @@
     </section>
     
 
- 
+    
    <script type="text/javascript" src="jquery-3.4.1.min.js"></script>          
    <script type="text/javascript" src="bootstrap.min.js"></script>
-   <script type="text/javascript" src="assets/js/proj.js"></script>
+   <script type="text/javascript" src="assets/js/accountCreation.js"></script>
 </body>
 </html>
