--- a/Homepage.html
+++ b/Homepage.html
@@ -29,6 +29,7 @@
                                     <li><a href="#footer">Contact</a></li>
                                 </ul>
                                 <ul class="nav navbar-nav navbar-right">
+                                    <li><a href="admin.html">Admin</a></li>
                                     <li><a href="Login.html">Log In</a></li>
                                     <li><a href="newAccount.html">Create my Purse</a></li>
                                 </ul>
