--- a/about.html
+++ b/about.html
@@ -10,7 +10,9 @@
 <body>
     <p>Piggy Purse helps you achieve financial freedom by enabling you save responsibly.<br><br>We pride
         ourselves in gibving the best online savings you can have.
-        <p>kindly click <a href="newAccount.html">Sign Up</a> to create an account with us</p>
+        <p>kindly click <a href="newAccount.html">Sign Up</a> to create an account with us.
+            You can <a href="Login.html">Log In</a> here.</p>
+        <p></p>
     
 </body>
 </html>
