--- a/Login.html
+++ b/Login.html
@@ -16,10 +16,11 @@
                     <input id="email" type="email" name="email" required>
                 </label><br>
                 <label for="password">Password<br>
-                    <input id="password" type="password" name="email" minlength="7" required>
+                    <input id="password" type="password" name="password" minlength="7" required>
                 </label><br>
-                <br><button class="btn-login" type="submit">Log In</button>
+                <br><button id="btn-login" type="submit">Log In</button>
             </form>
+            <p>click here to <a href="newAccount.html">SignUp</a></p>
     </div>
 
     
@@ -27,6 +28,6 @@
     
    <script type="text/javascript" src="jquery-3.4.1.min.js"></script>          
    <script type="text/javascript" src="bootstrap.min.js"></script>
-   <script type="text/javascript" src="assets/js/proj.js"></script>
+   <script type="text/javascript" src="assets/js/login.js"></script>
 </body>
 </html>
